--- a/package.json
+++ b/package.json
@@ -3,10 +3,38 @@
   "version": "1.0.0",
   "description": "Yarn environment",
   "main": "index.js",
+  "scripts": {
+    "build": "webpack --mode production",
+    "lint": "eslint .",
+    "start": "webpack-dev-server --mode development",
+    "test": "jest --coverage --passWithNoTests"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shayu78/yarn-env.git"
   },
   "author": "Alexey Shishkin <shayu78@mail.ru>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/cli": "^7.12.7",
+    "@babel/core": "^7.12.7",
+    "@babel/preset-env": "^7.12.7",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.1",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.3.1",
+    "url-loader": "^4.1.1",
+    "webpack": "v4",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "core-js": "^3.7.0"
+  }
 }
