--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yarn-env",
+  "name": "ahj-yarn-env",
   "version": "1.0.0",
   "description": "Yarn environment",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shayu78/yarn-env.git"
+    "url": "git+https://github.com/shayu78/ahj-yarn-env.git"
   },
   "author": "Alexey Shishkin <shayu78@mail.ru>",
   "license": "MIT",
